--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
 body{
 	display: grid;
-	grid-template-rows: 70px 600px 70px;
-	grid-template-columns: 300px 1fr;
-	grid-row-gap: 10px;
-	grid-column-gap: 20px;
+    grid-template-areas: 'header header'
+                         'side main'
+                         'footer footer';
+    grid-template-rows: 10% 1fr 10%;
+    grid-template-columns: 20% 1fr;                                           
+	grid-gap: 10px;
+	height: 100vh;
 }
 
 header {
-	grid-column: 1 / 3;
+	grid-area: header;
 	background-color: #909090;
 	text-align: center;
 }
 aside {
-	grid-column: 1 / 2;
+	grid-area: side;
 	background-color: #ff7390;
 }
 main {
-	grid-column: 2 / 3;
+	grid-area: main;
 	background-color: #483947;
 }
 footer {
-	grid-column: 1 / 3;
+	grid-area: footer;
 	background-color: #394857;
 }
