--- a/style.css
+++ b/style.css
@@ -22,6 +22,20 @@ main {
 	grid-area: main;
 	background-color: #483947;
 }
+.main-grid {
+	display: grid;
+	grid-template-rows: repeat(3, 30%) ;
+    grid-template-columns: repeat(4, 20%);
+    grid-gap: 4%;
+    justify-content: center;
+    padding: 20px 0;
+}
+.main-grid >div {
+	background-color: #fff; 
+
+} 
+
+
 footer {
 	grid-area: footer;
 	background-color: #394857;
