--- a/style.css
+++ b/style.css
@@ -42,3 +42,18 @@ footer {
 	grid-area: footer;
 	background-color: #394857;
 }
+
+@media screen and (min-width: 768px) and (max-width: 920px) {
+    .main-grid{
+    	grid-template-rows: repeat(4,20%);
+    	grid-template-columns: repeat(3,20%);
+    }
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 480px) {
+
+}
