--- a/style.css
+++ b/style.css
@@ -51,6 +51,14 @@ footer {
 }
 
 @media screen and (min-width: 480px) and (max-width: 768px) {
+	.main-grid{
+		grid-template-rows: repeat(6,15%);
+		grid-template-columns: repeat(2,40%);
+		grid-gap: 2%;
+	}
+	.main-grid >div:nth-child(2n){
+		background-color: red;
+	}
 
 }
 
