--- a/style.css
+++ b/style.css
@@ -57,11 +57,23 @@ footer {
 		grid-gap: 2%;
 	}
 	.main-grid >div:nth-child(2n){
-		background-color: red;
+		background-color: #f00;
 	}
 
 }
 
 @media screen and (max-width: 480px) {
+	.main-grid{
+		grid-template-rows: repeat(12,6.5%);
+		grid-template-columns: 90%;
+		grid-gap: 2%;
+	}
+	body{
+	    grid-template-areas: 'header'
+                             'main'
+                             'side'
+                             'footer';
+        grid-template-rows: 10% 1fr 10% 10%;
+        grid-template-columns: 100%; 
 
 }
